<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_splash_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWelcome"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/secret_textview_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/application_icon"
        android:src="@drawable/ic_splash" />

    <TextView
        android:id="@+id/secret_creator_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:text="@string/creator"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:textStyle="bold" />


</LinearLayout>