<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/hint_first_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_first_name"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/hint_last_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_last_name"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hint_username"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/hint_email">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/hint_phone_number">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone_number"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/hint_address">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_address"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButtonEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:textSize="25sp"
                android:textColor="@color/colorWhite"
                android:textAllCaps="false"
                android:background="@color/colorPrimaryDark"
                android:text="@string/update"
                android:layout_marginEnd="5dp" />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButtonCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:textSize="25sp"
                android:textColor="@color/colorWhite"
                android:textAllCaps="false"
                android:background="@color/colorPrimaryDark"
                android:text="@string/text_cancel"
                android:layout_marginStart="5dp" />
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>
